refactor(previz-service): вынесена общая логика генерации кадров и добавлена безопасная обработка UUID и исключений